Docs: swag docs
